--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==0.5.0
 aniso8601==7.0.0
 anyio==2.2.0
+appdirs==1.4.4
 appnope==0.1.2
 argon2-cffi==20.1.0
 async-exit-stack==1.0.1
@@ -9,6 +10,7 @@ attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
 beautifulsoup4==4.9.3
+black==21.5b1
 bleach==3.3.0
 certifi==2020.12.5
 cffi==1.14.5
@@ -71,6 +73,7 @@ packaging==20.9
 pandocfilters==1.4.3
 parso==0.8.2
 partd==1.2.0
+pathspec==0.8.1
 pendulum==2.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -97,6 +100,7 @@ pytz==2021.1
 pytzdata==2020.1
 PyYAML==5.4.1
 pyzmq==22.0.3
+regex==2021.4.4
 requests==2.25.1
 Rx==1.6.1
 Send2Trash==1.5.0
