--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,11 @@
     "python.testing.pytestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.unittestEnabled": true,
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true,
+    "python.linting.banditEnabled": true,
+    "python.linting.pylintArgs": [
+        "--disable=import-error"
+        // pylint doesn't get the PYTHONPATH so local modules throw this error
+    ]
 }
