--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     # Create the necessary environment variables.
     # env_file:
     #     - .env/development/database
+    networks:
+        - integration
     ports:
         - 5432:5432
     environment:
@@ -18,3 +20,9 @@ services:
         - POSTGRES_PASSWORD=postgres
     volumes:
         - postgres-data:/var/lib/postgresql/data
+
+
+networks:
+    integration:
+        external:
+            name: integration-net
