--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,12 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.8
+install_requires =
+    blist==1.3.6
+    mwparserfromhell==0.6.2
+    pydantic==1.8.2
+    SQLAlchemy==1.4.20
+    Unidecode==1.2.0
 
 [options.packages.find]
 where = src
