--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 name = "vulcan"
 crate-type = ["cdylib"]
 
-[dependencies]
-pyo3 = "0.12"
-libc = "0.2"
+[dependencies.pyo3]
+version = "0.14.1"
+features = ["extension-module"]
