--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+coverage==6.2
 cycler==0.10.0
 decorator==5.0.8
 defusedxml==0.7.1
@@ -24,6 +25,7 @@ dnspython==2.1.0
 email-validator==1.1.2
 entrypoints==0.3
 fastapi==0.65.1
+filelock==3.0.12
 gitdb==4.0.7
 GitPython==3.1.17
 graphene==2.1.8
@@ -32,8 +34,10 @@ graphql-relay==2.0.1
 greenlet==1.1.0
 h11==0.12.0
 httptools==0.1.2
+huggingface-hub==0.0.8
 idna==2.10
 igraph==0.1.11
+iniconfig==1.1.1
 ipykernel==5.5.5
 ipython==7.23.1
 ipython-genutils==0.2.0
@@ -75,17 +79,20 @@ pbr==5.6.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.2.0
+pluggy==1.0.0
 prometheus-client==0.10.1
 promise==2.3
 prompt-toolkit==3.0.18
 psycopg2==2.8.6
 ptyprocess==0.7.0
+py==1.11.0
 pycparser==2.20
 pydantic==1.8.2
 Pygments==2.9.0
 pylint==2.8.2
 pyparsing==2.4.7
 pyrsistent==0.17.3
+pytest==6.2.5
 python-dateutil==2.8.1
 python-devtools==2
 python-dotenv==0.17.1
@@ -99,6 +106,7 @@ QtPy==1.9.0
 regex==2021.4.4
 requests==2.25.1
 Rx==1.6.1
+sacremoses==0.0.45
 scikit-learn==0.24.2
 scipy==1.6.3
 seaborn==0.11.1
@@ -114,9 +122,13 @@ terminado==0.9.5
 testpath==0.4.4
 texttable==1.6.3
 threadpoolctl==2.1.0
+tokenizers==0.10.3
 toml==0.10.2
+torch==1.8.1+cpu
 tornado==6.1
+tqdm==4.61.1
 traitlets==5.0.5
+transformers==4.6.1
 typing-extensions==3.10.0.0
 ujson==4.0.2
 Unidecode==1.2.0
